@@ -2,7 +2,8 @@ PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ??? 2000, Version 4.0.0 Release
-- Add an optional third argument to fseek to indicate were to seek from. (Sterling)
+- Add an optional third argument to fseek to indicate were to seek from.
+  (Andrei)
 - OCIBindByName() will no longer complain about bindlength beeing zero. (Thies)
 - Converted the IMAP module to the high performance API (Zeev)
 - The fgetcsv() function now handles embedded end-of-line in a quoted field
